# enis_computer_catkin

devel/: .catkin  .rosinstall  setup.sh
devel/include/lane_detector/: DetectorConfig.h  Lane.h
devel/lib/lane_detection/: lane_detection_node
devel/lib/lane_detector/: lane_detector
devel/lib/my_first_awesome_pkg/: listener_node  my_first_awesome_pkg_node  talker_node
devel/lib/opencv_tutorial/: opencv_tutorial_node
devel/lib/pkgconfig/: lane_detection.pc  lane_detector.pc  my_first_awesome_pkg.pc  opencv_tutorial.pc  serial.pc  serial_communication.pc  serial_port.pc  usb_cam.pc
devel/lib/usb_cam/: usb_cam_node
src/Lane_Detector-master/: CMakeLists.txt
src/Lane_Detector-master/src/: preprocessor.cpp
src/lane_detection/: CMakeLists.txt  CameraInfoOpt.c  package.xml
src/lane_detection/launch/: lane_follower.launch
src/lane_detection/src/: IPM.h  internal_cam_test.cpp  lane_detector_enis.cpp  lane_detector_enis_v0.0.1.cpp  lane_detector_enis_v0.0.2.cpp  lane_detector_enis_v0.0.3.cpp  lane_detector_enis_v0.0.4.cpp  lane_detector_enis_v0.0.5.cpp  lane_detector_enis_v0.0.6.cpp  lane_detector_enis_v0.1.0.cpp  lane_detector_enis_v0.1.1.cpp  lane_detector_enis_v0.1.2.cpp  main.cpp  my_publisher.cpp  (+12 more)
src/my_first_awesome_pkg/: CMakeLists.txt  package.xml
src/my_first_awesome_pkg/launch/: talker_listener.launch
src/my_first_awesome_pkg/src/: listener_node.cpp  listener_node_v0.0.1.cpp  listener_node_v0.0.2.cpp  listener_node_v0.0.3.cpp  listener_node_v0.0.4.cpp  listener_node_v0.0.5.cpp  talker_node.cpp
src/opencv_tutorial/: CMakeLists.txt  package.xml
(+23 files in other folders)
